@@ -29,7 +29,7 @@ dist-hook:
 	perl -pi -e 's/\n/\r\n/g' `find $(distdir) -name '*.bpg'`
 
 distclean-local:
-	$(RM) CONTENTS TAGS
+	$(RM) CONTENTS TAGS log4cpp-config
 
 CONTENTS::
 	find $(top_srcdir) \( ! -type l -a -name '*.cpp' -o -name '*.hh' -o -name Makefile.am \) > $@
