@@ -1,11 +1,13 @@
 This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.
 
+2002-08-14 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
+	* Makefile.am, include/log4cpp/Makefile.am, tests/Makefile.am:
+	added distclean-local targets.
+	
 2002-08-13 David Resnick <dresnick@mobilespear.com>
     * include/log4cpp/PatternLayout.hh: documentation fixes.
     
 2002-08-09 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
-	* Release as 0.3.2rc2
-	
 	* msvc6/log4cppDLL/log4cppDLL.rc: update version and product info.
 
 	* include/log4cpp/Portability.hh: added comments.
